terraform/main.tf
provider "aws" {
  region = var.region
}


## Create VPC-Resources for project

# The VPC
resource "aws_vpc" "de-vpc" {
  cidr_block = "10.1.0.0/16"
  tags = {
    Name = "de-vpc"
  }
}

# Public Subnet (for Orchestration)
resource "aws_subnet" "de-public-subnet" {
  vpc_id            = aws_vpc.de-vpc.id
  availability_zone = "us-east-1a"

  cidr_block = "10.1.1.0/24"
  tags = {
    Name = "de-public-subnet"
  }
}


# IGW for public subnet
resource "aws_internet_gateway" "de-igw" {
  vpc_id = aws_vpc.de-vpc.id
  tags = {
    Name = "de-igw"
  }
}

# Route Table for public SN (internet access)
resource "aws_route_table" "de-public-rt" {
  vpc_id = aws_vpc.de-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.de-igw.id
  }
  tags = {
    Name = "de-public-rt"
  }
}

# Map route-table to public SN
resource "aws_route_table_association" "de-rta-public-subnet" {
  depends_on = [
    aws_subnet.de-public-subnet,
    aws_route_table.de-public-rt
  ]
  subnet_id      = aws_subnet.de-public-subnet.id
  route_table_id = aws_route_table.de-public-rt.id
}

# Private Subnet (for DB)
resource "aws_subnet" "de-private-subnet-1" {
  vpc_id            = aws_vpc.de-vpc.id
  cidr_block        = "10.1.2.0/24"
  availability_zone = "us-east-1b"
  tags = {
    Name = "de-private-subnet-1"
  }
}

resource "aws_subnet" "de-private-subnet-2" {
  vpc_id            = aws_vpc.de-vpc.id
  cidr_block        = "10.1.3.0/24"
  availability_zone = "us-east-1c"
  tags = {
    Name = "de-private-subnet-2"
  }
}

resource "aws_route_table" "de-private-rt-1" {
  vpc_id = aws_vpc.de-vpc.id
  tags = {
    Name = "de-private-rt-1"
  }
}

resource "aws_route_table" "de-private-rt-2" {
  vpc_id = aws_vpc.de-vpc.id
  tags = {
    Name = "de-private-rt-2"
  }
}

# Map route-table to private SN
resource "aws_route_table_association" "de-rta-private-subnet-1" {
  depends_on = [
    aws_subnet.de-private-subnet-1,
    aws_route_table.de-private-rt-1
  ]
  subnet_id      = aws_subnet.de-private-subnet-1.id
  route_table_id = aws_route_table.de-private-rt-1.id
}

resource "aws_route_table_association" "de-rta-private-subnet-2" {
  depends_on = [
    aws_subnet.de-private-subnet-2,
    aws_route_table.de-private-rt-2
  ]
  subnet_id      = aws_subnet.de-private-subnet-2.id
  route_table_id = aws_route_table.de-private-rt-2.id
}

# Create Security Group
resource "aws_security_group" "de-ec2-sg" {
  name        = "de-ec2-sg"
  description = "Security Group for accessing the EC2 VPC resources"
  vpc_id      = aws_vpc.de-vpc.id

  # ingress {
  #   description = "SSH access"
  #   from_port   = 22
  #   to_port     = 22
  #   protocol    = "tcp"
  #   cidr_blocks = ["0.0.0.0/0"]
  # }

  ingress {
    description = "Internet access to the Mage Pipeline / IDE"
    from_port   = 6789
    to_port     = 6789
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Grafana access"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Outbount access to Aurora DB in private subnet"
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["10.1.2.0/24"] # Grant access to private subnet
  }

  egress {
    description      = "Full internet access"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}

## Create EC2 in public subnet
resource "aws_instance" "mage-instance" {
  depends_on                  = [aws_rds_cluster_instance.de-aurora-instance]
  ami                         = "ami-005fc0f236362e99f" # Ubuntu 22.04
  instance_type               = "m5.large"              # $0.096, 2 vCPU, 8 GiB RAM, EBS only
  key_name                    = "de_key"
  subnet_id                   = aws_subnet.de-public-subnet.id
  vpc_security_group_ids      = [aws_security_group.de-ec2-sg.id]
  associate_public_ip_address = true
  iam_instance_profile        = aws_iam_instance_profile.ec2-instance-profile.name # IAM Role for EC2 instance

  root_block_device {
    volume_size = 40
    volume_type = "gp2"
  }

  user_data = templatefile("user_data.sh", {
    aws_region            = var.region,
    aws_access_key_id     = var.aws-access-key-id,
    aws_secret_access_key = var.aws-secret-access-key,
    kaggle_username       = var.kaggle-username,
    kaggle_key            = var.kaggle-key,
    project_name          = var.project-name,
    postgres_dbname       = aws_rds_cluster.de-aurora-cluster.database_name,
    postgres_schema       = var.postgres-schema,
    postgres_user         = aws_rds_cluster.de-aurora-cluster.master_username,
    postgres_password     = var.postgres-password,
    postgres_host         = aws_rds_cluster.de-aurora-cluster.endpoint,
    postgres_port         = aws_rds_cluster.de-aurora-cluster.port,
    s3_bucket_name        = var.s3-bucket-name,
    postgres_timeout      = var.postgres-timeout
  })

  tags = {
    Name = "Orchestration Mage-Instance"
  }
}

resource "aws_security_group" "de-rds-sg" {
  name        = "de-rds-sg"
  description = "Security Group for RDS Database"
  vpc_id      = aws_vpc.de-vpc.id

  ingress {
    description     = "PostgreSQL Access"
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.de-ec2-sg.id] # Grant access to public subnets sg
  }
}

# Subnet Group for Aurora Database
resource "aws_db_subnet_group" "de-aurora-subnet-group" {
  name        = "de-aurora-subnet-group"
  description = "Subnet Group for Aurora Database"
  subnet_ids = [
    aws_subnet.de-private-subnet-1.id,
    aws_subnet.de-private-subnet-2.id
  ]
  tags = {
    Name = "de-aurora-subnet-group"
  }
}

resource "aws_rds_cluster" "de-aurora-cluster" {
  cluster_identifier = "aurora-cluster"
  availability_zones = [
    aws_subnet.de-private-subnet-1.availability_zone,
    aws_subnet.de-private-subnet-2.availability_zone
  ]
  engine              = "aurora-postgresql"
  engine_mode         = "provisioned"
  engine_version      = "16.6"
  database_name       = var.postgres-dbname
  master_username     = var.postgres-username
  master_password     = var.postgres-password
  storage_encrypted   = true
  skip_final_snapshot = true

  vpc_security_group_ids = [aws_security_group.de-rds-sg.id]

  serverlessv2_scaling_configuration {
    min_capacity             = 0
    max_capacity             = 5
    seconds_until_auto_pause = 300
  }

  db_subnet_group_name = aws_db_subnet_group.de-aurora-subnet-group.name

  tags = {
    Name = "de-aurora-cluster"
  }
}

resource "aws_rds_cluster_instance" "de-aurora-instance" {
  count              = 1
  identifier         = "de-aurora-instance"
  cluster_identifier = aws_rds_cluster.de-aurora-cluster.cluster_identifier
  instance_class     = "db.serverless" # 16GB RAM, 2 vCPU, $0.225/h
  engine             = aws_rds_cluster.de-aurora-cluster.engine
  engine_version     = aws_rds_cluster.de-aurora-cluster.engine_version

  # Ensuring that instances are created in the designated subnet
  db_subnet_group_name = aws_db_subnet_group.de-aurora-subnet-group.name

  tags = {
    Name = "de-aurora-instance"
  }
}
